vlib/v/checker/tests/type_alias_struct_invalid_field_naming.vv
type Struct = struct {
	field_One int
	field_two int
}
